welcome.lessons.welcome.bat.bool1.Makes10.scala.error
makes10:6: error: ';' expected but 'else' found.
	else {return false}
        ^